RESOLVED FIXED105563
REGRESSION (r138191): Tests crash in ResourceRequest::setStorageSession
https://bugs.webkit.org/show_bug.cgi?id=105563
Summary REGRESSION (r138191): Tests crash in ResourceRequest::setStorageSession
Attachments
proposed fix (3.75 KB, patch)
2012-12-20 12:13 PST, Alexey Proskuryakov
sam: review+
more fix (1.46 KB, patch)
2012-12-20 17:13 PST, Alexey Proskuryakov
beidson: review+
Alexey Proskuryakov
Comment 1 2012-12-20 12:12:06 PST
Alexey Proskuryakov
Comment 2 2012-12-20 12:13:44 PST
Created attachment 180384 [details] proposed fix
Alexey Proskuryakov
Comment 3 2012-12-20 12:14:36 PST
*** Bug 105562 has been marked as a duplicate of this bug. ***
Alexey Proskuryakov
Comment 4 2012-12-20 13:00:51 PST
*** Bug 105567 has been marked as a duplicate of this bug. ***
Ryosuke Niwa
Comment 5 2012-12-20 13:05:30 PST
Comment on attachment 180384 [details] proposed fix View in context: https://bugs.webkit.org/attachment.cgi?id=180384&action=review > Source/WebCore/ChangeLog:10 > + Don't try to appky a session if client canceled the request by setting it ot a null one. Typos? appky/ot
Alexey Proskuryakov
Comment 6 2012-12-20 13:06:00 PST
Alexey Proskuryakov
Comment 7 2012-12-20 17:11:00 PST
Re-opening for more fixup. http/tests/appcache/main-resource-redirect.html is crashing
Alexey Proskuryakov
Comment 8 2012-12-20 17:13:37 PST
Created attachment 180447 [details] more fix
Alexey Proskuryakov
Comment 9 2012-12-20 17:19:47 PST
Committed <http://trac.webkit.org/changeset/138328>. Filed bug 105591 about additional badness affecting this test.
Note You need to log in before you can comment on or make changes to this bug.