        REGRESSION (r138191): Tests fail in ResourceRequest::setStorageSession         https://bugs.webkit.org/show_bug.cgi?id=105563

Reviewed by Sam Weinig.

        * platform/network/cf/ResourceHandleCFNet.cpp: (WebCore::ResourceHandle::willSendRequest):
        * platform/network/mac/ResourceHandleMac.mm: (WebCore::ResourceHandle::willSendRequest):
        Don't try to appky a session if client canceled the request by setting it ot a null one.

        * platform/network/cf/ResourceRequestCFNet.cpp: (WebCore::ResourceRequest::setStorageSession):
        * platform/network/mac/ResourceRequestMac.mm: (WebCore::ResourceRequest::setStorageSession):
        Update platform request, so that the session does not get lost once it's updated later.



Canonical link: https://commits.webkit.org/123774@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@138288 268f45cc-cd09-0410-ab3c-d52691b4dbfc